--- a/typescript-feature/.vscode/settings.json
+++ b/typescript-feature/.vscode/settings.json
@@ -34,6 +34,7 @@
   ],
   "prettier.eslintIntegration": true,
   "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true
+    "source.fixAll.eslint": true
   },
+  "editor.tabSize": 2
 }
