--- a/typescript-feature/package.json
+++ b/typescript-feature/package.json
@@ -28,5 +28,9 @@
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0"
   }
 }
